--- a/style.css
+++ b/style.css
@@ -32,11 +32,6 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
-body {
-	-webkit-text-size-adjust: none;
-}
-
 /** Ultra Light */
 @font-face {
   font-family: "San Francisco";
@@ -58,9 +53,66 @@ body {
   src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
 }
 
+/** Medium */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 500;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-medium-webfont.woff");
+}
+
+/** Semi Bold */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 600;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-semibold-webfont.woff");
+}
+
+/** Bold */ 
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 700;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-bold-webfont.woff");
+}
+
+* {
+    font-family: "San Francisco"   
+}
+
+h1 { font-weight: 700; }
+h2 { font-weight: 600; }
+/*h3 { font-weight: 500; }*/
+p { font-weight: 400; }
+p.thin { font-weight: 200; }
+p.ultralight { font-weight: 100; }
+
+h1 {
+  font-size:3.5em;
+  text-align:center;
+  margin-top:-40px;
+  margin:10px;
+  width:100%;
+}
+
+h2 {
+  font-size:1.6em;
+  font-weight:lighter;
+}
+
+h3 {
+  font-size:3.6em;
+  font-weight: 200!important;
+  padding:20px;
+}
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
-  background-color:#eeeeee;
-  font-size: 16px!;
+  -webkit-text-size-adjust: none;
+/*  background-color:#eeeeee;*/
+
   color:#a9a9a9; margin:auto;
   font:  1em "San Francisco", sans-serif;
   color:#333;
@@ -68,6 +120,21 @@ body {
 
 body {
 	-webkit-text-size-adjust: none;
+  margin-bottom: 60px;
+}
+
+.page-header {
+  margin-top:100px;
+  border:0;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
 }
 
 #top-navigation-wrapper {
@@ -80,28 +147,48 @@ body {
   background-color:#eee;
 }
 
-#footer {
+.in-eight-words {
+  margin:50px;
+}
+.badge {
+  margin:40px;
+}
+
+.footer {
   font-size:13px;
+  padding-top:20px;
 }
 
-.wrapper {
-  width:100%;
+.features h2{
+  margin-top:100px;
 }
 
-.hand {
-  position:fixed;
-  width:100%;
-  height:90%;
+.features ul {
+  font-size:1.2em;
+  font-weight:200;
 }
 
-#phone {
-  margin:auto;
-  width:100%;
-  height:100%;
+.features td {
+  border:none!important;
+  font-size:1.2em;
+  padding:20px;
 }
 
-.app-title {
-/*  font-weight:lighter;*/
+.navbar-default  {
+  background-color:#007aff!important;
+  color:#fff!important;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+  border: 1px solid #fff!important
+}
+
+.navbar-default a {
+  color:#fff!important;
+}
+
+.navbar-default .active a {
+  color:#333!important;
 }
 
 .logo {
@@ -109,52 +196,4 @@ body {
   width:25px;
   height:25px;
   margin-top:-0.25em;
-}
-
-#navigation {
-  padding-left:20px;
-}
-
-ul {
-  float:right;
-  list-style-type: none;
-  margin:0;
-  margin-right:0.25em;
-  padding:0;
-  overflow:hidden;
-}
-
-li {
-    float: left;
-}
-
-li a {
-  display: block;
-  padding: 0.5em;
-  font-size:0.85em;
-  padding-top:0.15em;
-  text-decoration:none;
-  color:#fff;
-}
-
-#main {
-  display:block; 
-  margin:auto;
-}
-
-h1 {
-  text-align:center;
-  font-size:4em;
-  font-weight:lighter;
-  margin-top:-40px;
-  margin:10px;
-  width:100%;
-}
-
-section {
-  background-color:#fff;
-}
-
-.inner {
-  margin:20px;
 }
