--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ p.thin { font-weight: 200; }
 p.ultralight { font-weight: 100; }
 
 h1 {
-  font-size:3.5em;
+  font-size:3.0em;
   text-align:center;
   margin-top:-40px;
   margin:10px;
@@ -125,9 +125,11 @@ body {
 
 .page-header {
   margin-top:100px;
-  border:0;
+  border:0  ;
 }
-
+.hero-phone{
+  margin: 0 auto;
+}
 .footer {
   position: absolute;
   bottom: 0;
