--- a/style.css
+++ b/style.css
@@ -106,7 +106,8 @@ h3 {
   background-image: url("timeline.svg");
   background-repeat:no-repeat;
   background-size: 100% 2px;
-  background-position: bottom center
+  background-position: bottom center;
+  margin-bottom:50px;
 }
 
 html {
@@ -117,7 +118,6 @@ html {
 body {
   -webkit-text-size-adjust: none;
 /*  background-color:#eeeeee;*/
-
   color:#a9a9a9; margin:auto;
   font:  1em "San Francisco", sans-serif;
   color:#333;
@@ -139,7 +139,6 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  /* Set the fixed height of the footer here */
   height: 60px;
   background-color: #f5f5f5;
 }
@@ -156,7 +155,7 @@ body {
 
 .in-eight-words {
   margin-top:20px;
-  margin-bottom:100px;
+  margin-bottom:60px;
 }
 .badge {
   margin:40px;
@@ -176,10 +175,6 @@ body {
   margin-bottom:50px;
   font-size:1.2em;
   font-weight:400;
-}
-
-.pricing h3 {
-  margin-bottom:30px;
 }
 
 .pricing td {
@@ -224,6 +219,10 @@ body {
 .row img {
   padding-top:30px;
   padding-bottom:30px;
+}
+
+.appstore-badge {
+  margin: 0 auto;
 }
 
 .logo {
