border for active nav tab

--- a/style.css
+++ b/style.css
@@ -198,7 +198,8 @@ body {
 
 .navbar-default .active a {
   color:#333!important;
-  background-color:#fff;
+  background-color:#fff!important;
+  border-bottom:0px!important;
 }
 
 .pricing tr {
