--- a/style.css
+++ b/style.css
@@ -198,11 +198,10 @@ body {
 
 .navbar-default .active a {
   color:#333!important;
-
-}
-
-.navbar-default .navbar-nav>.active>a {
   background-color:#fff!important;
+  border-bottom:0px!important;
+}
+.navbar-default {
   border-bottom:0px!important;
 }
 
