--- a/style.css
+++ b/style.css
@@ -303,8 +303,12 @@ a {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px;
-  background-color: #f0f0f0;
+  height: 80px;
+  background-color:#007aff;
+}
+
+footer a {
+  color:#ffffff!important;
 }
 
 .copy {
