--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ body {
   font:  1.1em "San Francisco", sans-serif;
   color:#212121;
   letter-spacing:0.02em;
+  background-color:#007aff;
 }
 
 body {
