nav bg color cutoff

--- a/style.css
+++ b/style.css
@@ -335,13 +335,18 @@ div.featured-item {
   margin-left:-2em;
 }
 
+@media (max-width: 700px) {
+
+.navbar-collapse
+  {
+    background-color:#1a1a1a;
+    border:0px;
+    border:none;
+  }
+  
+}
+
 @media (max-width: 800px) {
-  .navbar-collapse
-    {
-      background-color:#1a1a1a;
-      border:0px;
-      border:none;
-    }
     
     .screenshot{
       height:30%;
